@@ -1,7 +1,7 @@
 #!/usr/bin/make
 
 NAME = donrails
-VERSION = 1.2.1
+VERSION = 1.3.0
 
 all: link
 
